# organice will not reflow if there's hard-wrapped content
# -*- eval: (auto-fill-mode 0) -*-

* General

All user visible changes to organice will be documented in this file.

When there are updates to the changelog, you will be notified and see a 'gift' icon appear on the top right corner.

* [2026-01-08 Thu]

** Added

*** UI for editing slash syntax in SCHEDULED timestamp repeaters
    - When editing a SCHEDULED timestamp with a repeater, you can now set a deadline range using the slash syntax (e.g., =.+2d/3d=)
    - This means "do this task at most every 2 days, but at least every 3 days"
    - The slash UI only appears for SCHEDULED timestamps, not DEADLINE timestamps
    - The deadline part can be removed by setting the value to 0
    - Upstream documentation: https://orgmode.org/manual/Tracking-your-habits.html
    - The parser already supported this syntax, but now you can edit it visually in the timestamp editor

* [2026-01-07 Tue]

** Added

*** Org Habits consistency graph
    - Visual consistency graph showing habit completion over time
    - Color-coded status indicators matching Emacs org-mode:
      - Green: Completed on this day
      - Blue: Not due yet (in grace period)
      - Yellow: Scheduled for this day, or due tomorrow
      - Red: Overdue (you missed this day)
    - Habits sorted before non-habits in agenda view
    - Settings for graph configuration:
      - Org habit preceding days (default: 21)
      - Org habit following days (default: 7)
      - Show all habits today
    - Habits identified by =STYLE: habit= property
    - Uses =:LOGBOOK:= entries to track completion history
    - Automatically sets =LAST_REPEAT= property on completion

See the [[https://organice.200ok.ch/documentation.html#org_habits][documentation]] for more details on habit configuration and usage.

** Fixed

*** Settings reset to defaults when config file is missing fields
