@@ -1,21 +1,23 @@
-import { setColorScheme } from '../actions/base';
+// The outer (store) => function is called once during applyMiddleware.
+// Register the OS color scheme change listener here, not in the action handler.
+export default (store) => {
+  if (typeof window !== 'undefined' && typeof window.matchMedia === 'function') {
+    const prefersColorSchemeMediaQueryList = window.matchMedia('(prefers-color-scheme: dark)');
 
-export default (store) => (next) => (action) => {
-  // Watch if the user changes the preferred color scheme through the
-  // OS or browser.
-
-  // Returns a MediaQueryList object
-  const prefersColorSchemeMediaQueryList = window.matchMedia('(prefers-color-scheme: dark)');
-
-  // Feature detection. If there's no dark mode (i.e. iOS <14), then
-  // the `matchMedia` query above does not resolve in anything that
-  // can be observed.
-  if ('addEventListener' in prefersColorSchemeMediaQueryList) {
-    prefersColorSchemeMediaQueryList.addEventListener('change', (e) => {
-      const selectedColorScheme = e.matches ? 'Dark' : 'Light';
-      store.dispatch(setColorScheme(selectedColorScheme));
-    });
+    if ('addEventListener' in prefersColorSchemeMediaQueryList) {
+      prefersColorSchemeMediaQueryList.addEventListener('change', () => {
+        // Only react to OS changes when the user's setting is 'OS'.
+        // If the user explicitly chose 'Light' or 'Dark', don't override their preference.
+        const currentColorScheme = store.getState().base.get('colorScheme');
+        if (currentColorScheme === 'OS') {
+          // Dispatch a dedicated action to trigger a re-render.
+          // loadTheme() in Entry.render() will re-query the OS preference
+          // via matchMedia and apply the correct colors.
+          store.dispatch({ type: 'OS_COLOR_SCHEME_CHANGED' });
+        }
+      });
+    }
   }
 
-  return next(action);
+  return (next) => (action) => next(action);
 };
